tests/integration/snapshots/integration__e2e__menagerie.snap
---
source: tests/integration/e2e.rs
expression: "zizmor().output(OutputMode::Both).input(input_under_test(\"e2e-menagerie\")).run()?"
---
 INFO zizmor: skipping impostor-commit: can't run without a GitHub API token
 INFO zizmor: skipping ref-confusion: can't run without a GitHub API token
 INFO zizmor: skipping known-vulnerable-actions: can't run without a GitHub API token
 INFO zizmor: skipping forbidden-uses: audit not configured
 INFO audit: zizmor: 🌈 completed @@INPUT@@/.github/dummy-action-2/action.yml
 INFO audit: zizmor: 🌈 completed @@INPUT@@/.github/workflows/another-dummy.yml
 INFO audit: zizmor: 🌈 completed @@INPUT@@/.github/workflows/dummy.yml
 INFO audit: zizmor: 🌈 completed @@INPUT@@/dummy-action-1/action.yaml
No findings to report. Good job!
